Rename instances_config to infra_config and node_type for infra_type
Makes more sense to me that naming

--- a/roles/create_openstack_instances/tasks/main.yml
+++ b/roles/create_openstack_instances/tasks/main.yml
@@ -15,5 +15,5 @@
     auto_floating_ip: yes
     meta: 
       group: infra
-      node_type: "{{ item.node_type }}"
-  with_items: instances_config
+      infra_type: "{{ item.infra_type }}"
+  with_items: infra_config
