--- a/infra_config.yml
+++ b/infra_config.yml
@@ -1,27 +1,27 @@
 ---
-instances_config:
+infra_config:
   - name: puppetdb.infra.test.rcarrillocruz.cloud
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: infra-test-network
-    node_type: puppetdb
+    infra_type: puppetdb
   - name: puppetmaster.infra.test.rcarrillocruz.cloud
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: infra-test-network
-    node_type: puppetmaster
+    infra_type: puppetmaster
   - name: jenkins.infra.test.rcarrillocruz.cloud
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: infra-test-network
-    node_type: jenkins
+    infra_type: jenkins
   - name: gerrit.infra.test.rcarrillocruz.cloud
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: infra-test-network
-    node_type: gerrit
+    infra_type: gerrit
   - name: nodepool.infra.test.rcarrillocruz.cloud
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: infra-test-network
-    node_type: nodepool
+    infra_type: nodepool
