Remove hardcoded hostvars reference from configure_puppemaster role
Instead of referencing hostvars, just set it as a var and pass
the needed value outside of the role

--- a/roles/configure_puppetmaster/tasks/main.yml
+++ b/roles/configure_puppetmaster/tasks/main.yml
@@ -9,4 +9,4 @@
 # Puppet apply the puppetmaster manifest
 - command: > 
     puppet apply --modulepath='/opt/git/system-config/modules:/etc/puppet/modules' 
-    -e 'class {"openstack_project::puppetmaster"':' puppetdb_server => "{{ hostvars[groups['puppetdb'][0]]['openstack']['name'] }}" }'
+    -e 'class {"openstack_project::puppetmaster"':' puppetdb_server => "{{ puppetdb_server }}" }'
