--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,19 +1,4 @@
 ---
-# Set hostname and /etc/hosts 
-# (Taken from https://github.com/ansible/ansible/pull/8482)
-- set_fact: full_hostname="{{ inventory_hostname}}"
-            short_hostname="{{ inventory_hostname.split('.', 1)[0] }}"
-
-# " lovely lonely double-quote for fixing vim highlighting
-
-- hostname: name={{ short_hostname }}
-
-- name: add hostname to /etc/hosts
-  lineinfile: dest=/etc/hosts
-              line='{{ hostvars[inventory_hostname]['openstack']['private_v4']}} {{ full_hostname }} {{ short_hostname }}'
-              insertafter='^127\.0\.0\.1'
-              state=present
-
 # Update packages
 - apt: update_cache=yes
 
@@ -22,10 +7,13 @@
 
 # Clone system-config 
 - git: repo=https://git.openstack.org/openstack-infra/system-config
-       dest=/opt/git/system-config
+       dest=/opt/system-config/production
+  tags: clone_system_config
 
 # Install puppet
-- command: bash /opt/git/system-config/install_puppet.sh
+- command: bash /opt/system-config/production/install_puppet.sh
+  tags: install_puppet
 
 # Install puppet modules
-- command: bash /opt/git/system-config/install_modules.sh
+- command: bash /opt/system-config/production/install_modules.sh
+  tags: install_puppet_modules
