Change site.yml to reflect bootstrap top-level playbook
I've reorg'd the files, now I do the puppetmaster bootstrap in
bootstrap.yml

--- a/site.yml
+++ b/site.yml
@@ -1,8 +1,7 @@
 ---
 # file: site.yml
-- include: provision
-- include: puppetdb
-- include: puppetmaster
-- include: jenkins
-- include: gerrit
-- include: nodepool
+- include: provision.yml
+- include: bootstrap.yml
+#- include: gerrit
+#- include: jenkins
+#- include: nodepool
