--- a/roles/configure_puppetdb/tasks/main.yml
+++ b/roles/configure_puppetdb/tasks/main.yml
@@ -1,3 +1,4 @@
 ---
 # Puppet apply the puppetdb manifest
-- command: puppet apply --modulepath='/opt/git/system-config/modules:/etc/puppet/modules' -e 'include openstack_project::puppetdb'
+- command: puppet apply --modulepath='/opt/system-config/production/modules:/etc/puppet/modules' -e 'include openstack_project::puppetdb'
+  tags: puppet_apply
