--- a/roles/configure_puppetmaster/tasks/main.yml
+++ b/roles/configure_puppetmaster/tasks/main.yml
@@ -8,5 +8,6 @@
 
 # Puppet apply the puppetmaster manifest
 - command: > 
-    puppet apply --modulepath='/opt/git/system-config/modules:/etc/puppet/modules' 
-    -e 'class {"openstack_project::puppetmaster"':' puppetdb_server => "{{ puppetdb_server }}" }'
+    puppet apply --modulepath='/opt/system-config/production/modules:/etc/puppet/modules'
+    -e 'class {"openstack_project::puppetmaster"':' puppetdb => false }'
+  tags: puppet_apply
