--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -10,15 +10,8 @@
   user: ubuntu
   sudo: true
   roles:
-    - { role: common }
+    - { role: install_required_packages }
+    - { role: clone_system_config }
+    - { role: install_puppet_and_modules }
     - { role: configure_puppetmaster }
     - { role: generate_puppet_certificates }
-
-- hosts: meta-infra_type_puppetdb
-  user: ubuntu
-  sudo: true
-  roles:
-    - { role: common }
-    - { role: configure_puppetdb }
-
-#    - { role: deploy_hiera }
