--- a/roles/bootstrap/configure_puppetmaster/tasks/main.yml
+++ b/roles/bootstrap/configure_puppetmaster/tasks/main.yml
@@ -11,3 +11,5 @@
     puppet apply --modulepath='/opt/system-config/production/modules:/etc/puppet/modules'
     -e 'class {"openstack_project::puppetmaster"':' puppetdb => false }'
   tags: puppet_apply
+
+- copy: src=puppetmaster.pp dest=/opt/system-config/production/modules/openstack_project/manifests
