--- a/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
+++ b/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
@@ -9,7 +9,7 @@
 # Puppet apply the puppetmaster manifest
 - command: > 
     puppet apply --modulepath='/opt/system-config/production/modules:/etc/puppet/modules'
-    -e 'class {"openstack_project::puppetmaster"':' puppetdb => false }'
+    -e 'class {"openstack_project::puppetmaster"':' 
+    puppetmaster_server => "{{ inventory_hostname }}",
+    puppetdb => false }'
   tags: puppet_apply
-
-- copy: src=puppetmaster.pp dest=/opt/system-config/production/modules/openstack_project/manifests
