Make sure puppet service is started and trigger puppet after that

--- a/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
+++ b/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
@@ -13,3 +13,7 @@
     puppetmaster_server => "{{ inventory_hostname }}",
     puppetdb => false }'
   tags: puppet_apply
+
+- service: name=puppet state=started
+
+- command: puppet agent --test
