--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,3 +4,15 @@
 
 # Install git
 - apt: name=git
+
+# Clone system-config 
+- git: repo="{{ system_config_repo_https_url }}"
+       dest=/opt/system-config/production
+       accept_hostkey=True
+       version="{{ system_config_branch }}"
+       force=True
+  tags: clone_system_config
+
+# Install puppet
+- command: bash /opt/system-config/production/install_puppet.sh
+  tags: install_puppet
