--- a/roles/bootstrap_puppetmaster/tasks/main.yml
+++ b/roles/bootstrap_puppetmaster/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
 - include: install_required_packages.yml
-- include: install_puppet_modules.yml
+- include: clone_system_config.yml
+- include: install_puppet_and_modules.yml
 - include: configure_puppetmaster.yml
