Use get_url to pull install_puppet.sh, no point cloning whole system-config

--- a/roles/bootstrap_puppet_infra_nodes/tasks/main.yml
+++ b/roles/bootstrap_puppet_infra_nodes/tasks/main.yml
@@ -2,8 +2,14 @@
 # Update packages
 - apt: update_cache=yes 
 
+# Download install_puppet.sh from system-config
+- get_url: 
+    url=https://git.openstack.org/cgit/openstack-infra/system-config/plain/install_puppet.sh
+    dest=/tmp/infra-ansible/install_puppet.sh
+
 # Install puppet
-- apt: name=puppet
+- command: bash /tmp/infra-ansible/install_puppet.sh
+  tags: install_puppet
 
 # Deploy puppet.conf template
 - template: src=puppet.conf.j2 dest=/etc/puppet/puppet.conf
