--- a/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
+++ b/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
@@ -14,6 +14,4 @@
     puppetdb => false }'
   tags: puppet_apply
 
-- service: name=puppet state=started
-
-- command: puppet agent --test
+- service: name=puppet enabled=yes state=started
