--- a/roles/post_puppet_jenkins/tasks/main.yml
+++ b/roles/post_puppet_jenkins/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+# Get JJB user password from Hiera
+- command: hiera -c /etc/puppet/hiera.yaml jenkins_jobs_password environment=production
+  delegate_to: "{{ groups['meta-infra_type_puppetmaster'][0] }}"
+  register: jenkins_jobs_password
+  no_log: True
+
 # Download Jenkins CLI
 - get_url: url=http://localhost:8080/jnlpJars/jenkins-cli.jar dest=/tmp/jenkins-cli.jar
   register: result
@@ -7,7 +13,7 @@
   delay: 10
 
 # Create JJB user
-- shell: echo 'hpsr=new hudson.security.HudsonPrivateSecurityRealm(false); hpsr.createAccount("gerrig", "gerrig")' | java -jar /tmp/jenkins-cli.jar -s http://localhost:8080 groovy =
+- shell: echo 'hpsr=new hudson.security.HudsonPrivateSecurityRealm(false); hpsr.createAccount("gerrig", "{{ jenkins_jobs_password }}")' | java -jar /tmp/jenkins-cli.jar -s http://localhost:8080 groovy =
   no_log: True
 
 # Trigger jenkins-jobs update in fire&forget mode, since it takes a long time to complete
