Trigger puppet agent after puppetmaster bootstrap
This is to apply config from site.pp, that is not fed on
initial puppet apply bootstrap

--- a/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
+++ b/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
@@ -15,3 +15,7 @@
   tags: puppet_apply
 
 - service: name=puppet enabled=yes state=started
+
+# Trigger a puppet agent --test to apply config from repo
+- command: puppet agent --test
+  ignore_errors: True
