Make generate_hiera script non idempotent
It's better, so a user can regenerate passwords and keys
as needed by just running the playbook/role.

--- a/roles/deploy_hiera/tasks/main.yml
+++ b/roles/deploy_hiera/tasks/main.yml
@@ -12,4 +12,4 @@
 - file: path=/etc/puppet/hieradata/production/fqdn state=directory
 
 # Generate hiera common.yaml values
-- script: generate_hiera_common.py creates=/etc/puppet/hieradata/production/common.yaml
+- script: generate_hiera_common.py
