Remove hardcoded security group from task
This value should be provided by user, instead of just assuming
all servers will just use 'default' security group

--- a/roles/provision_infra_servers/tasks/main.yml
+++ b/roles/provision_infra_servers/tasks/main.yml
@@ -12,7 +12,7 @@
     flavor: "{{ item.flavor }}"
     nics:
       - net-name: "{{ item.net_name }}"
-    security_groups: default
+    security_groups: "{{ item.security_groups }}"
     auto_floating_ip: yes
     meta: 
       group: infra
