--- a/site.yml
+++ b/site.yml
@@ -1,6 +1,5 @@
 ---
 # file: site.yml
-- include: provision_infra_servers.yml
 - include: common.yml
 - include: set_hostnames.yml
 - include: deploy_site_pp.yml
@@ -8,4 +7,7 @@
 - include: bootstrap_puppetmaster.yml
 - include: bootstrap_puppet_infra_nodes.yml
 - include: sign_infra_nodes_certs.yml
+- include: pre_puppet_gerrit.yml
 - include: run_puppet_infra_nodes.yml
+- include: post_puppet_gerrit.yml
+- include: post_puppet_jenkins.yml
