Remove hardcoded key_name value
This value should come from infra_config.yml

--- a/roles/provision_infra_servers/tasks/main.yml
+++ b/roles/provision_infra_servers/tasks/main.yml
@@ -7,7 +7,7 @@
     region_name: region-b.geo-1
     availability_zone: az2
     image: "{{ item.image }}"
-    key_name: workstation
+    key_name: "{{ key_name }}"
     timeout: 200
     flavor: "{{ item.flavor }}"
     nics:
