Use rsync to copy the system-config repo to puppetmaster
Instead of using a Git server to stage changes on system-config,
better just copy over the local system-config from the command
center machine, the instances created by OpenStack may not have
connectivity to the Git server.

--- a/roles/bootstrap_puppetmaster/tasks/main.yml
+++ b/roles/bootstrap_puppetmaster/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
-- include: clone_system_config.yml
+- include: rsync_system_config.yml
 - include: install_puppet_and_modules.yml
 - include: configure_puppetmaster.yml
