Fix synchronize creating production within production folder

--- a/roles/bootstrap_puppetmaster/tasks/rsync_system_config.yml
+++ b/roles/bootstrap_puppetmaster/tasks/rsync_system_config.yml
@@ -1,6 +1,6 @@
 ---
-- file: path=/opt/system-config/production state=directory
+- file: path=/opt/system-config state=directory
 
 # Synchronize system-config from local to dest machine
-- synchronize: src=/tmp/infra-ansible/system-config/production dest=/opt/system-config/production
+- synchronize: src=/tmp/infra-ansible/system-config/production dest=/opt/system-config/
   tags: rsync_system_config
