--- a/site.yml
+++ b/site.yml
@@ -2,7 +2,7 @@
 # file: site.yml
 - include: common.yml
 - include: set_hostnames.yml
-- include: deploy_site_pp.yml
+- include: deploy_system_config.yml
 - include: deploy_hiera.yml
 - include: bootstrap_puppetmaster.yml
 - include: bootstrap_puppet_infra_nodes.yml
