Fix call to commit_changes playbook
It was calling prior commit_push.yml

--- a/roles/deploy_system_config/tasks/main.yml
+++ b/roles/deploy_system_config/tasks/main.yml
@@ -2,4 +2,4 @@
 - include: create_temp_folder.yml
 - include: clone_system_config_locally.yml
 - include: generate_site_pp.yml
-- include: commit_push.yml
+- include: commit_changes.yml
