Run puppet apply against site.pp
No point on constructing a -e argument for puppet apply, since
site.pp is already generated and present on puppetmaster
we can simply use it as an argument for puppet apply.
Removed also puppet agent --test, since the puppet apply runs
the same config.

--- a/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
+++ b/roles/bootstrap_puppetmaster/tasks/configure_puppetmaster.yml
@@ -9,13 +9,7 @@
 # Puppet apply the puppetmaster manifest
 - command: > 
     puppet apply --modulepath='/opt/system-config/production/modules:/etc/puppet/modules'
-    -e 'class {"openstack_project::puppetmaster"':' 
-    puppetmaster_server => "{{ inventory_hostname }}",
-    puppetdb => false }'
+    /opt/system-config/production/manifests/site.pp
   tags: puppet_apply
 
 - service: name=puppet enabled=yes state=started
-
-# Trigger a puppet agent --test to apply config from repo
-- command: puppet agent --test
-  ignore_errors: True
