--- a/roles/deploy_system_config/tasks/clone_system_config_locally.yml
+++ b/roles/deploy_system_config/tasks/clone_system_config_locally.yml
@@ -2,6 +2,7 @@
 # Clone system-config locally in the command machine
 - git: repo="{{ system_config_repo_url }}"
        dest=/tmp/infra-ansible/system-config/production
+       version=master
        accept_hostkey=True
        force=True
   tags: clone_system_config_locally
