--- a/roles/deploy_system_config/tasks/commit_changes.yml
+++ b/roles/deploy_system_config/tasks/commit_changes.yml
@@ -1,5 +1,5 @@
 ---
-- command: git commit -a -m "deploy_site_pp commit from infra-ansible"
+- command: git commit -a -m "deploy_system_config commit from infra-ansible"
   args:
     chdir: /tmp/infra-ansible/system-config/production
   ignore_errors: True
