Disable facts gathering on top-level playbooks
In the playbooks logic, the facts are not used and they are a
quite expensive operation, this speeds up execution.

--- a/bootstrap_puppet_infra_nodes.yml
+++ b/bootstrap_puppet_infra_nodes.yml
@@ -1,6 +1,7 @@
 ---
 # file: bootstrap_puppet_infra_nodes.yml
 - hosts: infra:!meta-infra_type_puppetmaster
+  gather_facts: no
   user: ubuntu
   sudo: true
   roles:
