--- a/deploy_system_config.yml
+++ b/deploy_system_config.yml
@@ -1,6 +1,7 @@
 ---
 # file: deploy_system_config.yml
 - hosts: localhost
+  gather_facts: no
   connection: local
   roles:
     - { role: deploy_system_config }
