--- a/bootstrap_puppetmaster.yml
+++ b/bootstrap_puppetmaster.yml
@@ -1,6 +1,7 @@
 ---
 # file: bootstrap_puppetmaster.yml
 - hosts: meta-infra_type_puppetmaster
+  gather_facts: no
   user: ubuntu
   sudo: true
   roles:
