--- a/run_puppet_infra_nodes.yml
+++ b/run_puppet_infra_nodes.yml
@@ -1,6 +1,7 @@
 ---
 # file: run_puppet_infra_nodes
 - hosts: infra:!meta-infra_type_puppetmaster
+  gather_facts: no
   user: ubuntu
   sudo: true
   roles:
