--- a/sign_infra_nodes_certs.yml
+++ b/sign_infra_nodes_certs.yml
@@ -1,6 +1,7 @@
 ---
 # file: sign_infra_nodes_certs
 - hosts: meta-infra_type_puppetmaster
+  gather_facts: no
   user: ubuntu
   sudo: true
   roles:
