Add refs/heads to git show-ref command

--- a/roles/deploy_system_config/tasks/clone_system_config_locally.yml
+++ b/roles/deploy_system_config/tasks/clone_system_config_locally.yml
@@ -12,7 +12,7 @@
     chdir: /tmp/infra-ansible/system-config/production
   register: checked_out_branch
 
-- command: git show-ref --verify --quiet "{{ system_config_branch }}"
+- command: git show-ref --verify --quiet refs/heads/"{{ system_config_branch }}"
   args:
     chdir: /tmp/infra-ansible/system-config/production
   register: system_config_branch_exists
