--- a/infra_config.yml.sample
+++ b/infra_config.yml.sample
@@ -1,32 +1,33 @@
 ---
 system_config_repo_url: git@your_git_server/system-config.git
 key_name: your_openstack_key
+domainname: yourdomain
 infra_servers:
-  - name: puppetmaster.yourdomain.cloud
+  - name: puppetmaster
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: your_neutron_network
     security_groups: default
     infra_type: puppetmaster
-  - name: zuul.yourdomain.cloud
+  - name: zuul
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: your_neutron_network
     security_groups: default
     infra_type: zuul
-  - name: jenkins.yourdomain.cloud
+  - name: jenkins
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.medium
     net_name: your_neutron_network
     security_groups: "default,webserver"
     infra_type: jenkins
-  - name: gerrit.yourdomain.cloud
+  - name: gerrit
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.large
     net_name: your_neutron_network
     security_groups: "default,webserver"
     infra_type: gerrit
-  - name: nodepool.yourdomain.cloud
+  - name: nodepool
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
     net_name: your_neutron_network
