--- a/infra_config.yml.sample
+++ b/infra_config.yml.sample
@@ -1,4 +1,5 @@
 ---
+os_client_config_cloud: envvars
 system_config_repo_url: git@your_git_server/system-config.git
 key_name: your_openstack_key
 domainname: yourdomain
