--- a/roles/set_hostnames/tasks/main.yml
+++ b/roles/set_hostnames/tasks/main.yml
@@ -3,7 +3,8 @@
 # Inspired by: 
 # https://github.com/ansible/ansible/pull/8482)
 # https://gist.github.com/rothgar/8793800
-- hostname: name="{{ inventory_hostname.split('.', 1)[0] }}"
+- name: Set /etc/hostname 
+  hostname: name="{{ inventory_hostname.split('.', 1)[0] }}"
 
 # " lovely lonely double-quote for fixing vim highlighting
 
