Add server specific cloud configuration
A user may not just want to deploy all servers under the same
os_client_config cloud, this change adds a default at the role
level defaulting to envvars, and the creation loop checks first
per-server occ cloud, then default to role default if not defined.

--- a/roles/provision_infra_servers/tasks/main.yml
+++ b/roles/provision_infra_servers/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Create OpenStack instances
   os_server:
     state: present
-    cloud: "{{os_client_config_cloud}}"
+    cloud: "{{item.os_client_config_cloud | default(os_client_config_cloud) }}"
     name: "{{ item.name }}.{{ domainname }}"
     image: "{{ item.image }}"
     key_name: "{{ key_name }}"
