Install pip package on the common role
Several issues on various Puppet modules where it doesn't install
pip dependency, rather install this in the common role upfront.

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,4 +3,7 @@
   apt: update_cache=yes
 
 - name: Install git package
-  apt: name=git
+  apt: name={{ item }} state=installed
+  with_items:
+    - git
+    - python-pip
