Add bootstrap_jjb role and top-level playbook
This configured JJB configuration and triggers JJB update to populate
jobs

--- a/site.yml
+++ b/site.yml
@@ -5,3 +5,4 @@
 - include: bootstrap_puppetmaster.yml
 - include: bootstrap_gerrit.yml
 - include: bootstrap_puppet_infra_nodes.yml
+- include: bootstrap_jjb.yml
