--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,9 +1,18 @@
 ---
+- name: Get deb package for Puppetlabs repository
+  get_url: >
+    url=https://apt.puppetlabs.com/puppetlabs-release-{{ansible_distribution_release}}.deb
+    dest=/tmp/puppetlabs-release-{{ansible_distribution_release}}.deb
+
+- name: Install Puppetlabs repository deb package
+  apt: deb=/tmp/puppetlabs-release-{{ansible_distribution_release}}.deb
+
 - name: Update packages 
   apt: update_cache=yes
 
-- name: Install git package
+- name: Install Puppet and other required packages
   apt: name={{ item }} state=installed
   with_items:
     - git
     - python-pip
+    - puppet
