Remove the installation and execution of puppet agent
The installation of the puppet agent is now done in the common
role, plus the execution of the puppet agent is now done
via the run_on_<service> top-level playbooks.

--- a/roles/bootstrap_puppetmaster/tasks/main.yml
+++ b/roles/bootstrap_puppetmaster/tasks/main.yml
@@ -2,9 +2,7 @@
 - name: Install required packages
   apt: name={{ item }} state=installed
   with_items:
-    - puppet
     - puppetmaster-passenger
-    - puppetmaster
     - python-paramiko
 
 - name: Download install_modules.sh script
@@ -98,11 +96,8 @@
 - name: Start puppet agent service
   service: name=puppet enabled=yes state=started
 
-- name: Start puppet agent
-  service: name=puppetmaster enabled=yes state=started
+- name: Start apache2 for Puppetmaster passenger
+  service: name=apache2 enabled=yes state=started
 
 - name: Enable puppet agent, as it is disabled upon installation
   command: puppet agent --enable
-
-- name: Run puppet agent to apply configuration
-  puppet:
