--- a/site.yml
+++ b/site.yml
@@ -3,6 +3,9 @@
 - include: common.yml
 - include: set_hostnames.yml
 - include: bootstrap_puppetmaster.yml
-- include: bootstrap_gerrit.yml
 - include: bootstrap_puppet_infra_nodes.yml
+- include: bootstrap_gerrit.yml
+- include: run_puppet_on_gerrit.yml
+- include: run_puppet_on_zuul.yml
+- include: run_puppet_on_jenkins.yml
 - include: bootstrap_jjb.yml
