Add initial support for creating volumes
For some services it may be desirable to have instances using
cinder volumes, this change allows to define that in the
infra_config.yml inventory and the provision_infra_servers
will create them.
A follow-up patch will attach the volumes defined on each instance.

Change-Id: I28d187569655fbbc45cec0bce771ce8adab1f4dd

--- a/infra_config.yml.sample
+++ b/infra_config.yml.sample
@@ -28,6 +28,11 @@ infra_servers:
     net_name: your_neutron_network
     security_groups: "default,webserver"
     infra_type: gerrit
+    volumes:
+      - name: gerrit_volume
+        size: 40
+      - name: gerrit_volume2
+        size: 60
   - name: nodepool
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
     flavor: standard.small
