Attach volumes defined on servers stanzas
This change will attach the volumes to the servers defining them.

Change-Id: Iea58103e3d640f70891a2a8fcc16af26d79407ca

--- a/roles/provision_infra_servers/tasks/main.yml
+++ b/roles/provision_infra_servers/tasks/main.yml
@@ -27,3 +27,14 @@
     - infra_servers
     - volumes
     - { skip_missing: yes }
+
+- name: Attach OpenStack volumes
+  os_server_volume:
+    state: present
+    cloud: "{{item.os_client_config_cloud | default(os_client_config_cloud) }}"
+    server: "{{ item.0.name }}.{{ domainname }}"
+    volume: "{{ item.1.name }}"
+  with_subelements:
+    - infra_servers
+    - volumes
+    - { skip_missing: yes }
