Set validate_certs defaulting to no on all resources creation
Change-Id: I3f840ab56374fe07215a1cdfa66a186c60a19e4a

--- a/roles/setup_openstack_resources/tasks/main.yml
+++ b/roles/setup_openstack_resources/tasks/main.yml
@@ -5,7 +5,7 @@
     cloud: "{{item.os_client_config_cloud | default(os_client_config_cloud) }}"
     name: "{{ item.name }}"
     public_key: "{{ item.contents }}"
-    validate_certs: no
+    validate_certs: "{{ os_validate_certs }}"
   with_items: keypairs
 
 - name: Create instances
@@ -24,6 +24,7 @@
     meta:
       group: infra
       infra_type: "{{ item.infra_type }}"
+    validate_certs: "{{ os_validate_certs }}"
   with_items: infra_servers
 
 - name: Create volumes
@@ -32,6 +33,7 @@
     cloud: "{{item.os_client_config_cloud | default(os_client_config_cloud) }}"
     display_name: "{{ item.1.name }}"
     size: "{{ item.1.size }}"
+    validate_certs: "{{ os_validate_certs }}"
   with_subelements:
     - infra_servers
     - volumes
@@ -43,6 +45,7 @@
     cloud: "{{item.os_client_config_cloud | default(os_client_config_cloud) }}"
     server: "{{ item.0.name }}.{{ domainname }}"
     volume: "{{ item.1.name }}"
+    validate_certs: "{{ os_validate_certs }}"
   with_subelements:
     - infra_servers
     - volumes
