Add keypairs to infra_config sample and option to use key file
At the moment 'keypairs' isn't defined anywhere. It was added
to infra_config.yml.sample to help users define it.

Also, key_public_file variable was added to 'Create keypairs'
task, to allow users specify key_public_file instead of key
content.

Change-Id: I414aeeaee9c38bdbfe7e5607cb756f08335ac42c

--- a/infra_config.yml.sample
+++ b/infra_config.yml.sample
@@ -1,8 +1,11 @@
 ---
 os_client_config_cloud: envvars
 system_config_repo_url: git@your_git_server/system-config.git
-key_name: your_openstack_key
+key_name: your_openstack_key_name
 domainname: yourdomain
+keypairs:
+  - name: my_key_name
+    public_key: my_public_key_content
 infra_servers:
   - name: puppetmaster
     image: 9d25fe2d-cf31-4b05-8c58-f238ec78e633
