Switch the provisioning step to the cloud launcher role
I've been slowly decoupling the provisioning role from infra-ansible
into its own role:

http://git.openstack.org/cgit/openstack/ansible-role-cloud-launcher

Now that it has feature parity and it is gating in OpenStack CI,
just use it and remove setup_openstack_resources roles.

Change-Id: I4810d0bdb57cf1f069f20fb133f5f2afe15e4e87

--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,5 @@ deps = -r{toxinidir}/requirements.txt
 changedir = {toxinidir}
 commands =
     /usr/bin/wget -N https://raw.githubusercontent.com/ansible/ansible/devel/contrib/inventory/openstack.py
-    /bin/bash -c "/usr/bin/find -maxdepth 1 -name '*.yml' ! -name 'infra_config.yml'| /usr/bin/xargs -n1  ansible-playbook --syntax-check --list-tasks -i hosts"
+    ansible-galaxy install -r requirements.yml
+    /bin/bash -c "/usr/bin/find -maxdepth 1 -name '*.yml' ! -name 'infra_config.yml' ! -name 'requirements.yml' | /usr/bin/xargs -n1  ansible-playbook --syntax-check --list-tasks -i hosts"
